@@ -3,18 +3,19 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.alienlabs.adaloveslace</groupId>
   <artifactId>adaloveslace</artifactId>
-  <version>0.1.1</version>
+  <version>0.2.6</version>
   <description>A tatting lace patterns creation software</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>17</java.version>
+    <java.version>19</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <test-plugins.version>3.0.0-M5</test-plugins.version>
-    <javafx.version>17.0.2</javafx.version>
+    <test-plugins.version>3.0.0-M7</test-plugins.version>
+    <javafx.version>19</javafx.version>
     <itext.version>7.2.2</itext.version>
     <testfx.version>4.0.16-alpha</testfx.version>
+    <junit.version>5.8.2</junit.version>
     <logback.version>1.3.0-alpha16</logback.version>
   </properties>
 
@@ -64,23 +65,21 @@
       <version>${itext.version}</version>
     </dependency>
 
-    <!-- JAXB API v4.0.0 -->
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
       <version>4.0.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jakarta.activation</groupId>
-          <artifactId>jakarta.activation-api</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
-    <!-- JAXB v3.0.2 reference implementation (curiously with com.sun coordinates) -->
     <dependency>
       <groupId>com.sun.xml.bind</groupId>
       <artifactId>jaxb-impl</artifactId>
-      <version>3.0.2</version>
+      <version>4.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
     </dependency>
 
     <dependency>
@@ -108,8 +107,14 @@
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>5.8.2</version>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -134,7 +139,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.3.1</version>
+      <version>4.6.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -146,10 +151,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.9.0</version>
-        <configuration>
-          <release>${java.version}</release>
-        </configuration>
+        <version>3.10.1</version>
+          <configuration>
+              <source>${java.version}</source>
+              <target>${java.version}</target>
+          </configuration>
       </plugin>
 
       <plugin>
@@ -157,63 +163,27 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>org.alienlabs.adaloveslace.App</mainClass>
+            <mainClass>org.alienlabs.adaloveslace/org.alienlabs.adaloveslace.App</mainClass>
+            <launcher>AdaLovesLace</launcher>
+            <jlinkZipName>AdaLovesLace</jlinkZipName>
+            <jlinkImageName>AdaLovesLace</jlinkImageName>
+            <noManPages>true</noManPages>
+            <stripDebug>true</stripDebug>
+            <noHeaderFiles>true</noHeaderFiles>
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>io.github.fvarrui</groupId>
-        <artifactId>javapackager</artifactId>
-        <version>1.6.2</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>package</goal>
-            </goals>
-            <configuration>
-              <name>adaloveslace</name>
-              <mainClass>org.alienlabs.adaloveslace.App</mainClass>
-              <generateInstaller>true</generateInstaller>
-              <administratorRequired>false</administratorRequired>
-              <bundleJre>true</bundleJre>
-              <!--
-                customizedJre = false because of iText (which is not modular yet)
-                See: https://github.com/fvarrui/JavaPackager/issues/126
-              -->
-              <customizedJre>false</customizedJre>
-              <organizationName>AlienLabs</organizationName>
-              <organizationEmail>goupilpierre@gmail.com</organizationEmail>
-              <assetsDir>${basedir}/src/main/resources/assets</assetsDir>
-              <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
-              <platform>auto</platform>
-              <copyDependencies>true</copyDependencies>
-              <winConfig>
-                <headerType>console</headerType>
-                <setupLanguages>
-                  <french>compiler:Languages\French.isl</french>
-                  <english>compiler:Languages\English.isl</english>
-                </setupLanguages>
-              </winConfig>
-              <vmArgs>
-                <vmArg>--module-path libs</vmArg>
-                <vmArg>-Dsun.java2d.uiScale=2.0</vmArg>
-                <vmArg>--add-modules io,kernel,layout,javafx.base,javafx.controls,javafx.graphics,javafx.swing,org.slf4j</vmArg>
-              </vmArgs>
-              <additionalResources>
-                <additionalResource>${basedir}/target/classes/org/</additionalResource>
-                <additionalResource>${basedir}/target/classes/assets/</additionalResource>
-              </additionalResources>
-              <fileAssociations>
-                <fileAssociation>
-                  <description>Ada Loves Lace file</description>
-                  <extension>lace</extension>
-                  <mimeType>application/lace</mimeType>
-                </fileAssociation>
-              </fileAssociations>
-            </configuration>
-          </execution>
-        </executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -222,10 +192,38 @@
         <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
         <version>${test-plugins.version}</version>
         <configuration>
+          <skipTests>${skipUTs}</skipTests>
+          <includes>
+            <include>**/unittest/**</include>
+          </includes>
+          <excludes>
+            <exclude>**/functionaltest/**</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${test-plugins.version}</version>
+        <executions>
+          <execution>
+            <phase>test</phase>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <forkCount>1</forkCount>
+          <useSystemClassLoader>true</useSystemClassLoader>
+          <includes>
+            <include>**/functionaltest/**</include>
+          </includes>
+          <excludes>
+            <exclude>**/unittest/**</exclude>
+          </excludes>
           <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
-          <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
-          </additionalClasspathElements>
+          <skipITs>${skipFTs}</skipITs>
         </configuration>
       </plugin>
 
@@ -285,4 +283,84 @@
       </plugin>
     </plugins>
   </reporting>
+
+  <profiles>
+    <profile>
+      <id>linux</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.github.fvarrui</groupId>
+            <artifactId>javapackager</artifactId>
+            <version>1.6.7</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>package</goal>
+                </goals>
+                <configuration>
+                  <!-- mandatory -->
+                  <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
+                  <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
+                  <!-- optional -->
+                  <bundleJre>true</bundleJre>
+                  <generateInstaller>true</generateInstaller>
+                  <generateMsi>false</generateMsi>
+                  <generateMsm>false</generateMsm>
+                  <administratorRequired>false</administratorRequired>
+                  <platform>linux</platform>
+                  <jrePath>/usr/lib/jvm/jdk-19</jrePath>
+                  <additionalResources>
+                  </additionalResources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>windows</id>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>io.github.fvarrui</groupId>
+              <artifactId>javapackager</artifactId>
+              <version>1.6.7</version>
+              <executions>
+                <execution>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>package</goal>
+                  </goals>
+                  <configuration>
+                    <!-- mandatory -->
+                    <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
+                    <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
+                    <!-- optional -->
+                    <bundleJre>true</bundleJre>
+                    <generateInstaller>true</generateInstaller>
+                    <generateMsi>true</generateMsi>
+                    <generateMsm>true</generateMsm>
+                    <administratorRequired>false</administratorRequired>
+                    <platform>windows</platform>
+                    <jrePath>C:\Program Files\Java\jdk-19</jrePath>
+                    <winConfig>
+                      <headerType>console</headerType>
+                      <setupLanguages>
+                        <french>compiler:Languages\French.isl</french>
+                        <english>compiler:Languages\English.isl</english>
+                      </setupLanguages>
+                    </winConfig>
+                    <additionalResources>
+                    </additionalResources>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+    </profile>
+  </profiles>
 </project>
